# python-project-83

./: Makefile  README.md  coverage.xml  database.sql  pyproject.toml  setup.cfg
.github/workflows/: cc-reporter.yml
page_analyzer/: __init__.py  app.py  date_and_time.py  db_connections.py  db_interface.py  db_queries.py  html_parsing.py  service_module.py  tables_creation.py  url_processing.py
page_analyzer/db_queries/: get_urls.sql
page_analyzer/templates/: error404.html  error500.html  footer.html  index.html  navbar.html  url.html  urls.html
tests/: first_test.py  test_app.py  test_app_ex.py  test_url_processing.py
