[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ai_gelios <ai_gelios@mail.ru>"]
readme = "README.md"
packages = [{ include = "page_analyzer" }]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"
requests = "^2.31.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.4"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
